MilestoneRFAFullSandBox/src/objects/BOD_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Addition_EN__c</fullName>
        <label>Addition (EN)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addition_JP__c</fullName>
        <label>Addition (JP)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <label>Agreement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment_In_Email__c</fullName>
        <label>Footer Email Comment (EN)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>DATEVALUE( Start_Time__c )</formula>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Comment_JP__c</fullName>
        <label>Footer Email Comment (JP)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Header_Email_Comment_EN__c</fullName>
        <label>Header Email Comment (EN)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Header_Email_Comment_JP__c</fullName>
        <label>Header Email Comment (JP)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Description__c</fullName>
        <label>Meeting Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_JP__c</fullName>
        <label>Name (JP)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Text_Encrypted__c</fullName>
        <label>Text (Encrypted)</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Physical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper Resolution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue_JP__c</fullName>
        <label>Venue (JP)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <label>Venue</label>
        <type>TextArea</type>
    </fields>
    <label>取締役会</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name_JP__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Venue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name (EN)</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Admin__c</fullName>
        <label>Admin</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Advisor__c</fullName>
        <label>Advisor</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Guest__c</fullName>
        <label>Guest</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Member__c</fullName>
        <label>Member</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Secretary__c</fullName>
        <label>Secretary</label>
    </sharingReasons>
</CustomObject>